--- a/style/p1.css
+++ b/style/p1.css
@@ -184,7 +184,7 @@ a {
 .post-it-note {
     font-family: 'Comic Neue', cursive;
     font-size: 8vw;
-    line-height: 15vh;
+    line-height: 17vh;
     text-align: center;
     position: relative;
     width: 15vw;
@@ -291,27 +291,18 @@ a {
       stroke-dashoffset: 0;
     }
 }
-.fixed_post{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
 .post_7{
     width: 8vw;
     height: 8vw;
     background: #ffdede;
-    transform: translate(80vw, 30vh);
+    position: absolute;
     box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
 .post_8{
     width: 8vw;
     height: 8vw;
     background: #ffdede;
-    transform: translate(72vw, 10vh) rotate(20deg);
+    position: absolute;
     box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
 .post_7 img, .post_8 img{
@@ -410,7 +401,9 @@ a {
     background: transparent;
 }
 .s5 .panel section h3{
+    display: inline-block;
     position: relative;
+    outline: 1px solid red;
 }
 .s5 .panel section h3::after{
     display: inline-block;
@@ -422,6 +415,12 @@ a {
     position: absolute;
     bottom: -.2rem;
     left: 0;   
+}
+.s5 .panel section p{
+    display: inline-block;
+}
+.s5 a{
+    color: #000;
 }
 /*section3*/
 #section3{
