--- a/style/style.css
+++ b/style/style.css
@@ -157,10 +157,6 @@ a {
     justify-content: center;
     align-items: center;
 }
-.inner > div > h2, #autoType {
-    color: black;
-    font-size: 4vw;
-}
 /*section1*/
 #section1{
     position: relative;
@@ -168,7 +164,7 @@ a {
     justify-content: space-evenly;
     background-color: #fff;
     background-image: linear-gradient(90deg, rgba(255,222,222,.5) 50%, transparent 50%), 
-                    linear-gradient(rgba(255,222,222,.5) 50%, transparent 50%);
+                      linear-gradient(rgba(255,222,222,.5) 50%, transparent 50%);
     background-size: 50px 50px;
 }
 .post_box{
@@ -218,15 +214,6 @@ a {
 }
 .post_1::before{
     border-top: 2vw solid #ffc2c2;
-}
-.post_1 p{
-    position: absolute;
-    top: 1vw;
-    left: 1vw;
-    width: 1vw;
-    height: 1vw;
-    background: #fff;
-    border-radius: 50%;
 }
 .post_2{
     transform: rotate(-5deg);
@@ -618,22 +605,22 @@ a {
     align-items: center;
 }
 .cello{
-    background: url('http://puiux.kr/images/celloimg.png') no-repeat;
+    background: url('../images/cello_clone_coding_screenshot.jpg') no-repeat;
     background-size: cover;
     background-position: 0 0;
 }
 .dat{
-    background: url('http://puiux.kr/images/datimg.png') no-repeat;
+    background: url('../images/da_technology_clone_coding_screenshot.jpg') no-repeat;
     background-size: cover;
     background-position: 0 0;
 }
 .mnh{
-    background: url('http://puiux.kr/images/mnhimg.png') no-repeat;
+    background: url('../images/mnh_clone_coding_screenshot.jpg') no-repeat;
     background-size: cover;
     background-position: 0 0;
 }
 .lol{
-    background: url('http://puiux.kr/images/lolimg.png') no-repeat;
+    background: url('../images/lol_clone_coding_screenshot.jpg') no-repeat;
     background-size: cover;
     background-position: 0 0;
 }
@@ -726,7 +713,7 @@ a {
     position: relative;
     z-index: 96;
     max-width: 30%;
-    filter: grayscale(50%);
+    filter: grayscale(100%);
     background: #fff;
     padding: 2vw;
     padding-bottom: 5vw;
@@ -777,17 +764,18 @@ a {
     text-align: center;
 }
 .contact form {
+    position: relative;
     width: 80%;
     margin: 2rem auto 4rem;
     background: #f8f4e5;
     border: 2px solid #000;
-            box-shadow: 15px 15px 0 #e6d1f5, 15px 15px 0 2px #000;
+    box-shadow: 15px 15px 0 #e6d1f5, 15px 15px 0 2px #000;
     padding: 4rem 2rem;
     box-sizing: border-box;
 }
 .contact label{
     display: block;
-    color: #aaa;
+    color: #222;
     font-family: 'Comic Neue', cursive;
     text-transform: uppercase;
     font-size: 1.4rem;
@@ -812,6 +800,10 @@ a {
 .contact textarea:focus{
     border-bottom: 2px solid #ffa580;
 }
+.contact input::placeholder, .contact textarea::placeholder{
+    color: #aaa;
+    font-size: 1rem;
+}
 .contact button{
     width: 90%;
     display: block;
@@ -825,11 +817,41 @@ a {
     font-size: 2rem;
     font-family: 'Comic Neue', cursive;
     text-transform: uppercase;
+    cursor: pointer;
 }
-
 .contact button:hover {
     background: black;
     color: white;
+}
+.contact button[disabled]:hover {
+    background: #ffa580;
+    color: rgba(16, 16, 16, 0.3);
+    cursor: not-allowed;
+}
+.contact .thankyou_message{
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background:#000;
+    width: 100%;
+    height: 50px;
+    color:#fff;
+    line-height: 50px;
+    text-align: center;
+}
+
+.contact .thankyou_message::after{
+    content:"";
+    position: absolute;
+    top:100%;
+    left:50%;
+    transform: translateX(-50%);
+    border-width: 10px;
+    border-style: solid;
+    border-color: #000 transparent transparent transparent;
 }
 
 @media (max-width: 800px){
@@ -878,5 +900,8 @@ a {
     }
     .contact form{
         width: 80vw;
+    }
+    .contact h3{
+        font-size: 10vw;
     }
 }
